# incorrections

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  fake-udp-packet.py  gps3.py  pyproject.toml  sample.conf  test_gps3.py
.github/workflows/: ci.yml  release.yml
src/: config.rs  main.rs  relay.rs  stats.rs
